# stignore

./: Cargo.toml  LICENSE-MIT  README.md  go.mod  main.go
src/: main.rs
